[tool.poetry]
name = "opencv-log"
version = "1.1.0"
description = "OpenCV based visual logger for debugging,logging and testing image processing code"
authors = ["Navarasu <navarasu@outlook.com>"]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/navarasu/opencv-log"

keywords = ['opencv','log','logger', 'debug', 'test','visual log']
classifiers = [
    "Operating System :: OS Independent",
]
packages = [ { include = "cvlog" }]
    
[tool.poetry.dependencies]
python = "^3.4"
opencv-python = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 ="^3.7"
coverage="4.5"
coveralls="1.8"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
