[tool.poetry]
name = "opencv-log"
version = "1.2.2"
description = "OpenCV based visual logger for debugging,logging and testing image processing code"
authors = ["Navarasu <navarasu@outlook.com>"]
readme = 'README.rst'
license = "MIT"
homepage = "https://navarasu.github.io/opencv-log"
repository = "https://github.com/navarasu/opencv-log"

keywords = ['opencv','log','logger', 'debug', 'test','visual log']
classifiers = [
    "Operating System :: OS Independent",
]
packages = [ { include = "cvlog" }]
    
[tool.poetry.dependencies]
python = "^3.5"
opencv-python = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 ="^3.7"
coverage="^4.5"
coveralls="^1.8"
beautifulsoup4="4.8.2"
sphinx="2.4.4"
sphinx-rtd-theme="0.4.3"
sphinx-copybutton="^0.2.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
